<resources>
    <string name="app_name">facebook</string>
    <string name="userHint">Email or Phone</string>
    <string name="passHint">Password</string>
    <string name="loginbtn">Login</string>
    <string name="forgot">
        <a href="https://www.facebook.com/login/identify/?ctx=recover&amp;ars=facebook_login&amp;from_login_screen=0"> Forgotten account?</a>
    </string>
    <string name="create">
        <a href="https://www.facebook.com/r.php?locale=en_GB&amp;display=page">Create New account</a>

    </string>
    <string name="createACC">Create New account</string>
    <string name="myName">yousf makkawy</string>
    <string name="now">Just Now</string>
    <string name="upload">Upload a New photo</string>
    <string name="caption">Wild and Free Just Like the sea</string>
    <string name="like">like</string>
    <string name="comm">Comment</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create account</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="finish">Continue</string>
    <string name="age">Age</string>
    <string name="add_new_post">Add New Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_post">Create Post</string>
    <string name="add_post">Add Post</string>
    <string name="what_s_in_your_mind">What\'s in your mind?</string>
</resources>