<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.AddNewPostFragment">

  <RelativeLayout
      android:id="@+id/top_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

      <ImageView
          android:id="@+id/back_icon"
          android:layout_gravity="start"
          android:layout_marginStart="@dimen/_10sdp"
          android:layout_marginTop="@dimen/_5sdp"
          android:layout_alignParentStart="true"
          android:layout_width="@dimen/_25sdp"
          android:layout_height="@dimen/_25sdp"
          android:src="@drawable/back_icon"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:text="@string/create_post"
          android:textStyle="bold"
          android:layout_marginEnd="@dimen/_5sdp"
          android:textSize="@dimen/_12ssp"/>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/add_post_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_marginEnd="@dimen/_8sdp"
          android:text="@string/add_post"
          android:textAllCaps="false"
          app:cornerRadius="@dimen/_14sdp" />

  </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/post_title_add"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_below="@id/top_bar"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="start"
        android:hint="@string/what_s_in_your_mind" />

    <ImageView
        android:id="@+id/add_photo_new_post"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@id/post_title_add"
        android:src="@drawable/add_img_icon" />
    <ImageView
        android:id="@+id/photo_selected"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_below="@id/add_photo_new_post"
        android:layout_marginTop="@dimen/_8sdp"
        tools:src="@color/blue"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />


</RelativeLayout>